
syntax = "proto3";
option java_package = "ir.ms.pb";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";


message PB_Activity {
    int64 Id = 1;
    int32 ActorUserId = 3;
    int32 ActionTypeId = 5;
    int32 RowId = 7;
    int32 RootId = 9;
    int64 RefId = 11;
    int32 CreatedAt = 13;
}
message PB_Bucket {
    int32 BucketId = 1;
    string BucketName = 3;
    int32 Server1Id = 5;
    int32 Server2Id = 7;
    int32 BackupServerId = 9;
    int32 ContentObjectTypeId = 11;
    int32 ContentObjectCount = 13;
    int32 CreatedTime = 15;
}
message PB_Chat {
    string ChatKey = 1;
    string RoomKey = 3;
    int32 RoomTypeEnumId = 5;
    int32 UserId = 7;
    int32 PeerUserId = 9;
    int64 GroupId = 11;
    int32 CreatedSe = 13;
    int64 StartMessageIdFrom = 15;
    int64 LastDeletedMessageId = 17;
    int64 LastSeenMessageId = 19;
    int64 LastMessageId = 21;
    int64 UpdatedMs = 23;
}
message PB_Comment {
    int32 Id = 1;
    int32 UserId = 3;
    int32 PostId = 5;
    string Text = 7;
    int32 CreatedTime = 9;
}
message PB_DirectMessage {
    int64 MessageId = 1;
    string MessageKey = 3;
    string RoomKey = 5;
    int32 UserId = 7;
    int64 MessageFileId = 9;
    int32 MessageTypeEnumId = 11;
    string Text = 13;
    int32 CreatedSe = 15;
    int32 PeerReceivedTime = 17;
    int32 PeerSeenTime = 19;
    int32 DeliviryStatusEnumId = 21;
}
message PB_DirectOffline {
    int64 DirectOfflineId = 1;
    int32 ToUserId = 3;
    string ChatKey = 5;
    int64 MessageId = 7;
    int64 MessageFileId = 9;
    string PBClass = 11;
    bytes DataPB = 13;
    string DataJson = 15;
    string DataTemp = 17;
    int64 AtTimeMs = 19;
}
message PB_DirectOfflineDep {
    int64 DirectOfflineId = 1;
    int32 ToUserId = 3;
    int64 MessageId = 5;
    int64 MessageFileId = 7;
    int64 OtherId = 9;
    string ChatKey = 11;
    int32 PeerUserId = 13;
    int32 RoomLogTypeId = 15;
    string PBClass = 17;
    bytes DataPB = 19;
    string DataJson = 21;
    string DataTemp = 23;
    int64 AtTimeMs = 25;
}
message PB_DirectToMessage {
    int64 Id = 1;
    string ChatKey = 3;
    int64 MessageId = 5;
    int32 SourceEnumId = 7;
}
message PB_DirectUpdate {
    int64 DirectUpdateId = 1;
    int32 ToUserId = 3;
    int64 MessageId = 5;
    int64 MessageFileId = 7;
    int64 OtherId = 9;
    string ChatKey = 11;
    int32 PeerUserId = 13;
    int32 EventType = 15;
    int32 RoomLogTypeId = 17;
    int32 FromSeq = 19;
    int32 ToSeq = 21;
    bytes ExtraPB = 23;
    string ExtraJson = 25;
    int64 AtTimeMs = 27;
}
message PB_FollowingList {
    int32 Id = 1;
    int32 UserId = 3;
    int32 ListType = 5;
    string Name = 7;
    int32 Count = 9;
    int32 IsAuto = 11;
    int32 IsPimiry = 13;
    int32 CreatedTime = 15;
}
message PB_FollowingListMember {
    int64 Id = 1;
    int32 ListId = 3;
    int32 UserId = 5;
    int32 FollowedUserId = 7;
    int32 FollowType = 9;
    int64 UpdatedTimeMs = 11;
}
message PB_FollowingListMemberHistory {
    int64 Id = 1;
    int32 ListId = 3;
    int32 UserId = 5;
    int32 FollowedUserId = 7;
    int32 FollowType = 9;
    int64 UpdatedTimeMs = 11;
    int32 FollowId = 13;
}
message PB_GeneralLog {
    int64 Id = 1;
    int32 ToUserId = 3;
    int32 TargetId = 5;
    int32 LogTypeId = 7;
    bytes ExtraPB = 9;
    string ExtraJson = 11;
    int64 CreatedMs = 13;
}
message PB_Group {
    int64 GroupId = 1;
    string GroupName = 3;
    int32 MembersCount = 5;
    int32 GroupPrivacyEnum = 7;
    int32 CreatorUserId = 9;
    int32 CreatedTime = 11;
    int64 UpdatedMs = 13;
    int32 CurrentSeq = 15;
}
message PB_GroupMember {
    int64 Id = 1;
    int64 GroupId = 3;
    string GroupKey = 5;
    int32 UserId = 7;
    int32 ByUserId = 9;
    int32 GroupRoleEnumId = 11;
    int32 CreatedTime = 13;
}
message PB_GroupMessage {
    int64 MessageId = 1;
    string RoomKey = 3;
    int32 UserId = 5;
    int64 MessageFileId = 7;
    int32 MessageTypeEnum = 9;
    string Text = 11;
    int64 CreatedMs = 13;
    int32 DeliveryStatusEnum = 15;
}
message PB_GroupToMessage {
    int64 Id = 1;
    int64 GroupId = 3;
    int64 MessageId = 5;
    int64 CreatedMs = 7;
    int32 StatusEnum = 9;
}
message PB_Like {
    int32 Id = 1;
    int32 PostId = 3;
    int32 PostTypeId = 5;
    int32 UserId = 7;
    int32 TypeId = 9;
    int32 CreatedTime = 11;
}
message PB_LogChange {
    int32 Id = 1;
    string T = 3;
}
message PB_Media {
    int32 Id = 1;
    int32 UserId = 3;
    int32 PostId = 5;
    int32 AlbumId = 7;
    int32 TypeId = 9;
    int32 CreatedTime = 11;
    string Src = 13;
}
message PB_MessageFile {
    int64 MessageFileId = 1;
    string MessageFileKey = 3;
    int32 OriginalUserId = 5;
    string Name = 7;
    int32 Size = 9;
    int32 FileTypeEnumId = 11;
    int32 Width = 13;
    int32 Height = 15;
    int32 Duration = 17;
    string Extension = 19;
    string HashMd5 = 21;
    int64 HashAccess = 23;
    int32 CreatedSe = 25;
    string ServerSrc = 27;
    string ServerPath = 29;
    string ServerThumbPath = 31;
    string BucketId = 33;
    int32 ServerId = 35;
    int32 CanDel = 37;
}
message PB_Msg {
    string Key = 1;
    string Name = 3;
    int32 Id = 5;
}
message PB_Notification {
    int64 Id = 1;
    int32 ForUserId = 3;
    int32 ActorUserId = 5;
    int32 ActionTypeId = 7;
    int32 ObjectTypeId = 9;
    int32 RowId = 11;
    int32 RootId = 13;
    int32 RefId = 15;
    int32 SeenStatus = 17;
    int32 CreatedTime = 19;
}
message PB_NotificationRemoved {
    int32 NotificationId = 1;
    int32 ForUserId = 3;
}
message PB_Offline {
    int64 Id = 1;
    int32 FromUserId = 3;
    int32 ToUserId = 5;
    string RpcName = 7;
    string PBClassName = 9;
    string Key = 11;
    string DataJson = 13;
    bytes DataBlob = 15;
    int32 DataLength = 17;
    int64 CreatedMs = 19;
}
message PB_OldMessage {
    int64 Id = 1;
    int64 Uid = 3;
    int64 UserId = 5;
    string MessageKey = 7;
    string RoomKey = 9;
    int32 MessageType = 11;
    int32 RoomType = 13;
    int64 MsgFileId = 15;
    bytes DataPB = 17;
    string Data64 = 19;
    string DataJson = 21;
    int64 CreatedTimeMs = 23;
}
message PB_OldMsgFile {
    int64 Id = 1;
    string Name = 3;
    int32 Size = 5;
    int32 FileType = 7;
    string MimeType = 9;
    int32 Width = 11;
    int32 Height = 13;
    int32 Duration = 15;
    string Extension = 17;
    bytes ThumbData = 19;
    string ThumbData64 = 21;
    string ServerSrc = 23;
    string ServerPath = 25;
    int32 ServerId = 27;
    int32 CanDel = 29;
}
message PB_OldMsgPush {
    int64 Id = 1;
    int64 Uid = 3;
    int64 ToUser = 5;
    int64 MsgUid = 7;
    int64 CreatedTimeMs = 9;
}
message PB_OldMsgPushEvent {
    int64 Id = 1;
    int64 Uid = 3;
    int32 ToUserId = 5;
    int64 MsgUid = 7;
    string MsgKey = 9;
    string RoomKey = 11;
    int32 PeerUserId = 13;
    int32 EventType = 15;
    int32 AtTime = 17;
}
message PB_PhoneContact {
    int32 Id = 1;
    string PhoneDisplayName = 3;
    string PhoneFamilyName = 5;
    string PhoneNumber = 7;
    string PhoneNormalizedNumber = 9;
    int32 PhoneContactRowId = 11;
    int32 UserId = 13;
    int32 DeviceUuidId = 15;
    int32 CreatedTime = 17;
    int32 UpdatedTime = 19;
}
message PB_Photo {
    int32 PhotoId = 1;
    int32 UserId = 3;
    int32 PostId = 5;
    int32 AlbumId = 7;
    int32 ImageTypeId = 9;
    string Title = 11;
    string Src = 13;
    string PathSrc = 15;
    int32 BucketId = 17;
    int32 Width = 19;
    int32 Height = 21;
    float Ratio = 23;
    string HashMd5 = 25;
    string Color = 27;
    int32 CreatedTime = 29;
    int32 W1080 = 31;
    int32 W720 = 33;
    int32 W480 = 35;
    int32 W320 = 37;
    int32 W160 = 39;
    int32 W80 = 41;
}
message PB_Post {
    int32 Id = 1;
    int32 UserId = 3;
    int32 TypeId = 5;
    string Text = 7;
    string FormatedText = 9;
    int32 MediaCount = 11;
    int32 SharedTo = 13;
    int32 DisableComment = 15;
    int32 HasTag = 17;
    int32 LikesCount = 19;
    int32 CommentsCount = 21;
    int32 EditedTime = 23;
    int32 CreatedTime = 25;
}
message PB_PushEvent {
    int64 PushEventId = 1;
    int32 ToUserId = 3;
    int64 ToDeviceId = 5;
    int64 MessageId = 7;
    int32 RoomTypeEnum = 9;
    int64 RoomId = 11;
    int32 PeerUserId = 13;
    int32 PushEventTypeEnum = 15;
    int32 AtTime = 17;
}
message PB_PushMessage {
    int64 PushMessageId = 1;
    int32 ToUserId = 3;
    int64 ToDeviceId = 5;
    int64 MessageId = 7;
    int32 RoomTypeEnum = 9;
    int64 CreatedMs = 11;
}
message PB_RecommendUser {
    int32 Id = 1;
    int32 UserId = 3;
    int32 TargetId = 5;
    float Weight = 7;
    int32 CreatedTime = 9;
}
message PB_Room {
    int64 RoomId = 1;
    string RoomKey = 3;
    int32 RoomTypeEnum = 5;
    int32 UserId = 7;
    int32 LastSeqSeen = 9;
    int32 LastSeqDelete = 11;
    int32 PeerUserId = 13;
    int64 GroupId = 15;
    int32 CreatedTime = 17;
    int32 CurrentSeq = 19;
}
message PB_SearchClicked {
    int64 Id = 1;
    string Query = 3;
    int32 ClickType = 5;
    int32 TargetId = 7;
    int32 UserId = 9;
    int32 CreatedAt = 11;
}
message PB_Session {
    int32 Id = 1;
    int32 UserId = 3;
    string SessionUuid = 5;
    string ClientUuid = 7;
    string DeviceUuid = 9;
    int32 LastActivityTime = 11;
    string LastIpAddress = 13;
    string LastWifiMacAddress = 15;
    string LastNetworkType = 17;
    int32 LastNetworkTypeId = 19;
    int32 AppVersion = 21;
    int32 UpdatedTime = 23;
    int32 CreatedTime = 25;
    int64 LastSyncDirectUpdateId = 27;
    int64 LastSyncGeneralUpdateId = 29;
    int64 LastSyncNotifyUpdateId = 31;
}
message PB_SettingClient {
    int32 UserId = 1;
    int32 AutoDownloadWifiVoice = 3;
    int32 AutoDownloadWifiImage = 5;
    int32 AutoDownloadWifiVideo = 7;
    int32 AutoDownloadWifiFile = 9;
    int32 AutoDownloadWifiMusic = 11;
    int32 AutoDownloadWifiGif = 13;
    int32 AutoDownloadCellularVoice = 15;
    int32 AutoDownloadCellularImage = 17;
    int32 AutoDownloadCellularVideo = 19;
    int32 AutoDownloadCellularFile = 21;
    int32 AutoDownloadCellularMusic = 23;
    int32 AutoDownloadCellularGif = 25;
    int32 AutoDownloadRoamingVoice = 27;
    int32 AutoDownloadRoamingImage = 29;
    int32 AutoDownloadRoamingVideo = 31;
    int32 AutoDownloadRoamingFile = 33;
    int32 AutoDownloadRoamingMusic = 35;
    int32 AutoDownloadRoamingGif = 37;
    int32 SaveToGallery = 39;
}
message PB_SettingNotification {
    int32 UserId = 1;
    int32 SocialLedOn = 3;
    string SocialLedColor = 5;
    int32 ReqestToFollowYou = 7;
    int32 FollowedYou = 9;
    int32 AccptedYourFollowRequest = 11;
    int32 YourPostLiked = 13;
    int32 YourPostCommented = 15;
    int32 MenthenedYouInPost = 17;
    int32 MenthenedYouInComment = 19;
    int32 YourContactsJoined = 21;
    int32 DirectMessage = 23;
    int32 DirectAlert = 25;
    int32 DirectPerview = 27;
    int32 DirectLedOn = 29;
    int32 DirectLedColor = 31;
    int32 DirectVibrate = 33;
    int32 DirectPopup = 35;
    int32 DirectSound = 37;
    int32 DirectPriority = 39;
}
message PB_Tag {
    int32 Id = 1;
    string Name = 3;
    int32 Count = 5;
    int32 IsBlocked = 7;
    int32 CreatedTime = 9;
}
message PB_TagsPost {
    int32 Id = 1;
    int32 TagId = 3;
    int32 PostId = 5;
    int32 TypeId = 7;
    int32 CreatedTime = 9;
}
message PB_TestChat {
    int64 Id = 1;
    int64 Id4 = 3;
    int64 TimeMs = 5;
    string Text = 7;
    string Name = 9;
    int64 UserId = 11;
    int32 C2 = 13;
    int32 C3 = 15;
    int32 C4 = 17;
    int32 C5 = 19;
}
message PB_TriggerLog {
    int64 Id = 1;
    string ModelName = 3;
    string ChangeType = 5;
    int64 TargetId = 7;
    string TargetStr = 9;
    int32 CreatedSe = 11;
}
message PB_User {
    int32 Id = 1;
    string UserName = 3;
    string UserNameLower = 5;
    string FirstName = 7;
    string LastName = 9;
    string About = 11;
    string FullName = 13;
    string AvatarUrl = 15;
    int32 PrivacyProfile = 17;
    string Phone = 19;
    string Email = 21;
    int32 IsDeleted = 23;
    string PasswordHash = 25;
    string PasswordSalt = 27;
    int32 FollowersCount = 29;
    int32 FollowingCount = 31;
    int32 PostsCount = 33;
    int32 MediaCount = 35;
    int32 LikesCount = 37;
    int32 ResharedCount = 39;
    int32 LastActionTime = 41;
    int32 LastPostTime = 43;
    int32 PrimaryFollowingList = 45;
    int32 CreatedTime = 47;
    int32 UpdatedTime = 49;
    string SessionUuid = 51;
    string DeviceUuid = 53;
    string LastWifiMacAddress = 55;
    string LastNetworkType = 57;
    int32 AppVersion = 59;
    int32 LastActivityTime = 61;
    int32 LastLoginTime = 63;
    string LastIpAddress = 65;
}
message PB_UserMetaInfo {
    int32 Id = 1;
    int32 UserId = 3;
    int32 IsNotificationDirty = 5;
    int32 LastUserRecGen = 7;
}
message PB_UserPassword {
    int32 UserId = 1;
    string Password = 3;
    int32 CreatedTime = 5;
}
